# Agro_Opt

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.frontend  PROJECT_LOG.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-frontend.txt  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml  docker-publish.yml
deliverables/: build_pptx.py  business_report_032025.md  presentation_032025.pptx
models/: fao_refs.json  feature_names.json
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_pca_analysis.ipynb  04_model_training.ipynb  05_recommendation_engine.ipynb
src/api/: __init__.py  app.py  main.py  schemas.py
src/data/: load_data.py  merge_datasets.py  preprocess.py
src/features/: feature_engineering.py  pca_analysis.py
src/frontend/: __init__.py  app.py
src/models/: evaluate.py  train.py
src/recommendation/: __init__.py  engine.py
src/utils/: config.py  logging.py
tests/: conftest.py  test_api.py  test_engine.py  test_schemas.py
